# jarvis

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: config.example.toml
config/workers/: claude.toml
packaging/: PKGBUILD
scripts/: dev
specs/: README.md  _template.md
specs/active/: 0004-jarvis-say-tts-notifier.md  0005-claude-session-attach.md  0006-generic-agent-session-subcommand.md  0008-orchestrator-c-worker-manifests-and-auto.md  0009-orchestrator-d-multi-worker-memory-schem.md  0010-orchestrator-a-dispatcher-trait-and-buil.md  0011-orchestrator-e1-task-registry-foundation.md  0012-orchestrator-e2-voice-intents-over-task.md  0013-orchestrator-b-llm-dispatcher-backends.md  0015-app-launcher.md  0016-stage-2-fix-oz-add-opencode.md
specs/inbox/: 2026-05-13-claude-session-attach.md  2026-05-13-conversational-fluency.md  2026-05-13-generalist-orchestrator-that-spawns-spec.md  2026-05-13-generic-agent-session-subcommand.md  2026-05-13-jarvis-say-tts-notifier.md  2026-05-13-shared-mic-stream-and-adaptive-voice-thr.md  2026-05-13-voice-driven-spec-management.md  2026-05-14-app-launcher-voice-driven-application-la.md  2026-05-14-daemon-context-bootstrap-what-is-the-cur.md  2026-05-14-listening-indicator-screen-vision-capabi.md  2026-05-14-orchestrator-a-dispatcher-trait-and-buil.md  2026-05-14-orchestrator-b-llm-dispatcher-backends.md  2026-05-14-orchestrator-c-worker-manifests-and-auto.md  2026-05-14-orchestrator-d-multi-worker-memory-schem.md  2026-05-14-orchestrator-e1-task-registry-foundation.md  2026-05-14-orchestrator-e2-voice-intents-over-task.md  2026-05-14-setup-wizard-step-for-dispatcher-fallbac.md  2026-05-15-opencode-as-main-agent.md  2026-05-15-stage-2-additional-backends.md  2026-05-16-systemd-user-daemon-audio-capture.md
specs/shipped/: 0001-pluggable-ai-agents.md  0002-pluggable-wake-backends.md  0003-conversation-sessions.md  0004-jarvis-say-tts-notifier.md  0005-claude-session-attach.md  0006-generic-agent-session-subcommand.md  0007-conversational-fluency.md  0008-orchestrator-c-worker-manifests-and-auto.md  0009-orchestrator-d-multi-worker-memory-schem.md  0010-orchestrator-a-dispatcher-trait-and-buil.md  0011-orchestrator-e1-task-registry-foundation.md  0012-orchestrator-e2-voice-intents-over-task.md  0013-orchestrator-b-llm-dispatcher-backends.md  0014-setup-wizard-dispatcher-fallback.md  0016-stage-2-fix-oz-add-opencode.md
src/: cli.rs  config.rs  daemon.rs  lib.rs  main.rs  pipeline.rs  recorder.rs  session.rs  stt.rs  tts.rs  wake.rs
src/agents/: claude.rs  claude_attach.rs  gemini.rs  mod.rs  openai.rs  shell.rs  warp.rs
src/dispatcher/: cascade.rs  default.rs  intent.rs  llm.rs  mod.rs
src/dispatcher/llm/: cascade.rs  mod.rs  openai_compat.rs  opencode_cli.rs  oz_cli.rs
src/handlers/: app_launcher.rs  calc.rs  date_today.rs  mod.rs  session_reset.rs  spec.rs  task_cancel.rs  task_clean.rs  task_list.rs  task_show.rs  time_of_day.rs
src/setup/: deps.rs  dispatcher.rs  locale.rs  mod.rs  voices.rs  whisper.rs
src/specs/: intent.rs  mod.rs  spec.rs  store.rs
src/tasks/: cancel.rs  cleanup.rs  format.rs  mod.rs  record.rs  registry.rs  resolve.rs  spawn.rs  triggers.rs
src/wake/: mod.rs  none.rs  whisper.rs
src/workers/: handle.rs  manifest.rs  mod.rs  registry.rs
systemd/: jarvis.service
tests/: cli.rs  config.rs  session.rs  setup_dispatcher_fallback.rs
